# Logistic-Audit-Agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 23c537c4c61a_initial_schema.py
app/: config.py  dependencies.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: decide.py  find_shipment.py  generate_evidence.py  match_contract.py  normalize.py  resolve_carrier.py  score.py  validate.py
app/api/routes/: freight_bills.py  reviews.py
app/core/: audit.py
app/db/: models.py  neo4j.py  postgres.py
app/prompts/: generate_evidence.py  normalize.py
app/schemas/: decision.py  freight_bill.py  review.py
app/services/: ai_client.py  graph_service.py
docs/: agent_flow.md  architecture_decisions.md  design.md
scripts/: seed_loader.py
tests/: test_agent_decisions.py
